--- a/Training.CoalesceApp.Data/Training.CoalesceApp.Data.csproj
+++ b/Training.CoalesceApp.Data/Training.CoalesceApp.Data.csproj
@@ -4,11 +4,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.6.24327.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.6.24327.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="IntelliTect.Coalesce" Version="$(CoalesceVersion)" />
+    <PackageReference Include="IntelliTect.Coalesce" Version="5.0.0-ci.20240710.4" />
   </ItemGroup>
 </Project>
