--- a/Training.CoalesceApp.Data.Test/Training.CoalesceApp.Data.Test.csproj
+++ b/Training.CoalesceApp.Data.Test/Training.CoalesceApp.Data.Test.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="IntelliTect.Coalesce" Version="5.0.0-ci.20240710.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0-release-24352-06" />
     <PackageReference Include="xunit" Version="2.9.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
